Restore the notification bar for screen capture on Android.

This is a recent regression, by cl https://chromium-review.googlesource.com/c/chromium/src/+/1118613.
Restore the notification bar for screen sharing on Android by swithcing
to the new method.

Bug: 860803
Change-Id: Ib788909eb152197df2eab3af95a078e9ed3d3678
Reviewed-on: https://chromium-review.googlesource.com/1128260
Reviewed-by: Tommy Nyquist <nyquist@chromium.org>
Commit-Queue: Weiyong Yao <braveyao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573354}
Former-commit-id: af7b925c8aa6c90348491b64aaa0b585c32db3af